--- a/.jshintrc
+++ b/.jshintrc
@@ -11,7 +11,7 @@
   "latedef": true,
   "newcap": true,
   "noarg": true,
-  "quotmark": "single",
+  "quotmark": "false",
   "regexp": true,
   "undef": true,
   "unused": true,
@@ -19,6 +19,8 @@
   "trailing": true,
   "smarttabs": true,
   "globals": {
-    "angular": false
+    "angular": false,
+    "jsondata": false,
+    "$": false
   }
 }
