--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "grunt-autoprefixer": "^0.7.3",
     "grunt-concurrent": "^0.5.0",
     "grunt-contrib-clean": "^0.5.0",
-    "grunt-contrib-coffee": "^0.12.0",
+    "grunt-contrib-coffee": "~0.12.0",
     "grunt-contrib-concat": "^0.4.0",
     "grunt-contrib-connect": "^0.7.1",
     "grunt-contrib-copy": "^0.5.0",
@@ -30,7 +30,8 @@
     "karma-jasmine": "^0.2.3",
     "karma-phantomjs-launcher": "^0.1.4",
     "load-grunt-tasks": "^0.4.0",
-    "time-grunt": "^0.3.1"
+    "time-grunt": "^0.3.1",
+    "grunt-contrib-less": "~0.12.0"
   },
   "engines": {
     "node": ">=0.10.0"
