--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "grunt-karma": "^0.9.0",
     "grunt-newer": "^0.7.0",
     "grunt-ng-annotate": "^0.3.0",
-    "grunt-svgmin": "^0.4.0",
+    "grunt-svgmin": "^2.0.0",
+    "grunt-svgstore": "^0.4.1",
     "grunt-usemin": "^2.1.1",
     "grunt-wiredep": "^1.7.0",
     "imagemin-gifsicle": "^4.0.0",
