--- a/.jshintrc
+++ b/.jshintrc
@@ -11,7 +11,7 @@
   "latedef": true,
   "newcap": true,
   "noarg": true,
-  "quotmark": "false",
+  "quotmark": false,
   "regexp": true,
   "undef": true,
   "unused": true,
