--- a/bower.json
+++ b/bower.json
@@ -1,13 +1,24 @@
 {
-  "name": "g-a-b-co",
-  "private": true,
+  "name": "sqr",
+  "version": "0.0.0",
   "dependencies": {
-    "jquery": "~2.1.1",
-    "modernizr": "~2.8.2",
-    "basil.js": "~0.3.4",
-    "jquery.hotkeys": "*",
-    "moment": "~2.8.4",
-    "ractive": "~0.6.1",
-    "i18n": "*"
-  }
+    "angular": "^1.3.0",
+    "json3": "^3.3.0",
+    "es5-shim": "^4.0.0",
+    "angular-animate": "^1.3.0",
+    "angular-aria": "^1.3.0",
+    "angular-cookies": "^1.3.0",
+    "angular-messages": "^1.3.0",
+    "angular-resource": "^1.3.0",
+    "angular-route": "^1.3.0",
+    "angular-sanitize": "^1.3.0",
+    "angular-touch": "^1.3.0",
+    "angular-material": "~0.6.1",
+    "angular-translate": "~2.5.0"
+  },
+  "devDependencies": {
+    "angular-mocks": "~1.3.0",
+    "angular-scenario": "~1.3.0"
+  },
+  "appPath": "app"
 }
